API integration and bug fixes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
     
     <div class="container">
         <div class="header">
+
+            <div class="header-controls">
+                <button class="icon-btn" id="soundToggle">
+                    <i class="fas fa-volume-up" id="soundIcon"></i>
+                </button>
+
+                <button class="icon-btn" id="themeToggle">
+                    <i class="fas fa-moon" id="themeIcon"></i>
+                </button>
+            </div>
+
             <h1 class="title">TypeTrack</h1>
             <p class="subtitle">Improve your typing speed and precision.</p>
-
-            <button class="theme-toggle" id="themeToggle">
-                <i class="fas fa-moon" id="themeIcon"></i>
-            </button>
         </div>
 
         <div class="stats-grid">
@@ -107,6 +114,7 @@
             </button>
         </div>
     </div> 
+
 
     <script src="./script.js"></script>
 </body>
